<!--
  ~ Copyright (c) 2025 by David Gerber - https://zapek.com
  ~
  ~ This file is part of Xeres-Android.
  ~
  ~ Xeres-Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Xeres-Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Xeres-Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Xeres</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_rooms">Chat Rooms</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <!-- Preference Titles -->
    <string name="instance_header">Instance</string>

    <!-- Instance Preferences -->
    <string name="hostname_title">Hostname or IP</string>
    <string name="port_title">Port</string>
    <string name="password_title">Password</string>
    <string name="type_hint">Type a message</string>
    <string name="user_generated">User Generated</string>
    <string name="settings">Settings</string>
    <string name="select_contact_or_room_to_share_to">Select contact or room to share to</string>
    <string name="version">Version</string>
    <string name="web">Web</string>
    <string name="source_code">Source code</string>

    <!-- Trust Levels -->
    <string name="trust_unknown">Unknown</string>
    <string name="trust_never">Never</string>
    <string name="trust_marginal">Marginal</string>
    <string name="trust_full">Full</string>
    <string name="trust_ultimate">Ultimate</string>

    <string name="scan_qr_instruction">Scan QR code</string>
</resources>