<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2025 by David Gerber - https://zapek.com
  ~
  ~ This file is part of Xeres-Android.
  ~
  ~ Xeres-Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Xeres-Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Xeres-Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="io.xeres.mobile.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_contacts"
            android:name="io.xeres.mobile.ui.contacts.ContactsFragment"
            android:label="@string/title_contacts"
            tools:layout="@layout/fragment_contacts" />

    <fragment
            android:id="@+id/navigation_rooms"
            android:name="io.xeres.mobile.ui.rooms.ChatRoomsFragment"
            android:label="@string/title_rooms"
            tools:layout="@layout/fragment_rooms" />

    <!--
    <fragment
            android:id="@+id/navigation_notifications"
            android:name="io.xeres.mobile.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />
            -->
</navigation>